[gd_scene load_steps=2 format=3 uid="uid://main_menu_scene_001"]

[ext_resource type="Script" path="res://coop/scripts/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CO-OP GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Host Game"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="JoinLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"
horizontal_alignment = 1

[node name="HostIDInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Host ID..."
alignment = 1

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Join"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Exit"
